<resources>
    <string name="app_name">Movies App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular">POPULAR</string>
    <string name="top_rated">TOP RATED</string>
    <string name="upcoming">UPCOMING</string>
    <string name="profile">PROFILE</string>
    <string name="search">SEARCH</string>
    <string name="search_by_title_id">Search by title, id....</string>
    <string name="oops_looks_like_there_is_some_problem">OOPS! looks like there is some problem😞</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="a_rated_for_mature_audience">A : Rated for mature audience</string>
    <string name="oops_result_not_found">OOPS! result not found.</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="more">More</string>
    <string name="popular_shows">Popular Shows</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="airing_today">Airing Today</string>
    <string name="top_rated_shows">Top Rated Shows</string>
    <string name="airing_on">Airing On</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_username">Enter Username...</string>
    <string name="enter_lastname">Enter Lastname...</string>
    <string name="enter_email">Enter Email...</string>
    <string name="enter_password">Enter Password...</string>
    <string name="register">Register</string>
    <string name="register_user">Register User</string>
    <string name="login">Login</string>
    <string name="not_a_user_register_yourself">Not a user Register yourself</string>
</resources>