<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/popular_fragment"
        android:icon="@drawable/popular_icon"
        android:title="@string/popular"
        android:visible="true" />

    <item
        android:id="@+id/top_rated_fragment"
        android:icon="@drawable/top_rated_icon"
        android:title="@string/top_rated"
        android:visible="true" />

    <item
        android:id="@+id/upcoming_fragment"
        android:icon="@drawable/upcoming_icon"
        android:title="@string/upcoming"
        android:visible="true" />

    <item
        android:id="@+id/search_movie"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        android:visible="true" />

</menu>